批量修改分组
